# haroldcarrdotcom

./: .gitignore  README.md  haroldcarrdotcom.cabal  stack.yaml
content/: contact.markdown  index.html  keybase.txt
content/about/: index-about.html  index.md  index.org
content/posts/: 2009-06-04-web-service-security.md  2012-10-01-soap-rest-websockets.md  2012-10-02-remoting-retrospective.md  2013-06-02-switching-to-hakyll.md  2013-07-09-reproducible-research-using-emacs-org-mode.md  2013-08-24-type-level-computation-in-haskell-via-gadts.md  2013-09-11-flac-to-mp3-via-haskell-shelly-and-ffmpeg.md  2013-09-15-JavaOne-BOF7479-Harold-Carr-PLUGGABLE-TRANSPORTS.md  2013-11-07-verified-articles.md  2013-12-15-concrete-monads-1-maybe-either-list-io.md  2014-02-19-monad-series.md  2014-02-23-concrete-monads-0-motivating-example.md  2014-02-28-using-graphviz-via-haskell.md  2014-04-27-pept-transport-protocol-format.md  2014-09-30-infiniband-message-bus.md  2015-02-06-how-to-connect-threepenny-gui-to-external-events.md  2015-07-14-programming-and-math.md  2017-05-27-recursion-schemes.md  (+3 more)
content/posts-disabled/: 2013-07-09-reproducible-research-using-emacs-org-mode.org  2013-10-03-repairing-code.md  2013-10-03-repairing-code.org  2013-10-06-intro-to-haskell-lenses.md  2014-02-19-monad-series.md  2014-02-23-concrete-monads-0-motivating-example.md
content/posts-in-org-mode/: 2013-06-02-switching-to-hakyll.org  2013-06-30-test-post.html  2013-06-30-test-post.org  2014-04-27-pept-transport-protocol-format.org
css/: bootstrap.css  main.css  responsive.css
lib/: bootstrap-save
src/: Main.hs
templates/: default.html  post.html
(+3 files in other folders)
