name:               haroldcarrdotcom
version:            0.2.0
description:        Harold Carr blog (powered by Hakyll)
copyright:          (c) 2003-2017, Harold Carr
license-file:       LICENSE.txt
author:             Harold Carr (derived from Travis Brown)
maintainer:         harold.carr@gmail.com
build-type:         Simple
cabal-version:      >= 1.10

library
  exposed-modules:  HC.Config
                  , HC.Main
                  , HC.Tags
  build-depends:    aeson
                  , array
                  , base == 4.*
                  , binary
                  , blaze-html
                  , bytestring
                  , containers
                  , either
                  , hakyll == 4.9.*
                  , filepath
                  , mtl
                  , old-locale
                  , pandoc
                  , shakespeare-js
                  , split
                  , statistics
                  , text
                  , time
                  , transformers
                  , vector-space
                  , xml-conduit
                  , xml-hamlet
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  default-language: Haskell2010

executable site
  main-is:          Main.hs
  build-depends:    base
                  , blaze-html
                  , filepath
                  , hakyll == 4.9.*
                  , haroldcarrdotcom
                  , pandoc
                  , split
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010
